--- a/shop.html
+++ b/shop.html
@@ -179,7 +179,7 @@
         <a href="electronics-detail.html" class="btn">View</a>
         <button
           class="btn"
-          onclick="addToCart('Electronics Items', 5000.99, 'cycle.webp')"
+          onclick="addToCart('Electronics Items', 5000.99, 'elec.jpg')"
         >
           Order
         </button>
